bootstrap 5 and resources

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -32,22 +32,8 @@ hr.spacer
   width: 100px
   margin: 50px auto
 
-.navbar-default
-  background: none
-  border: none
-  text-transform: uppercase
-  .navbar-nav
-    > li > a
-      color: white
-      font-size: 13px
-      font-weight: 700
-      &:hover
-        color: #eee
-    > .open > a
-      background: white !important
-  .dropdown-menu
-    border: none
-    border-radius: 0
+.navbar
+  z-index: 999
 
 .abstract
   background: #eee
