--- a/app/views/promotions/index.html.erb
+++ b/app/views/promotions/index.html.erb
@@ -13,4 +13,4 @@
   </tbody>
 </table>
 
-<%= link_to 'Nouvelle promotion', new_promotion_path, class: 'btn btn-primary btn-xs' if can? :create, Promotion %>
+<%= link_to 'Nouvelle promotion', new_promotion_path, class: 'btn btn-primary btn-sm' if can? :create, Promotion %>
