--- a/app/views/teaching_modules/_inline_list.html.erb
+++ b/app/views/teaching_modules/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% teaching_modules.each do |teaching_module| %>
-    <li><%= link_to teaching_module, teaching_module, class: 'btn btn-default btn-xs', title:teaching_module.label %></li>
+    <li><%= link_to teaching_module, teaching_module, class: 'btn btn-default btn-sm', title:teaching_module.label %></li>
   <% end %>
 </ul>
