--- a/app/views/teaching_modules/show.html.erb
+++ b/app/views/teaching_modules/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Modifier', edit_teaching_module_path(@teaching_module), class: 'btn btn-primary btn-xs' if can? :edit, @teaching_module %>
+<%= link_to 'Modifier', edit_teaching_module_path(@teaching_module), class: 'btn btn-primary btn-sm' if can? :edit, @teaching_module %>
 
 <div class="row">
   <div class="col-md-4">
