--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -141,7 +141,7 @@
           <%= link_to 'Ouvrir la semaine',
                       "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
                       target: :blank,
-                      class: 'btn btn-default btn-xs hidden-print' %>
+                      class: 'btn btn-default btn-sm hidden-print' %>
         </td>
       </tr>
     <% end %>
