--- a/app/views/application/_breadcrumb.html.erb
+++ b/app/views/application/_breadcrumb.html.erb
@@ -1,3 +1,3 @@
-<ol class="breadcrumb">
-  <%= render_breadcrumbs tag: :li, separator: '' %>
-</ol>
+<nav aria-label="breadcrumb">
+  <%= render_breadcrumbs builder: ::BootstrapFiveBreadcrumbs %>
+</nav>
