--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,11 +5,11 @@
       <p>Teach</p>
     </div>
     <p class="version">
-      <strong>Version 2.2</strong><br/>
-      Journey
+      <strong>Version 2.3</strong><br/>
+      Death Stranding
     </p>
     <% if current_user %>
-      <%= link_to('Déconnexion', destroy_user_session_path, method: :delete, class: 'btn btn-default btn-xs') %>
+      <%= link_to('Déconnexion', destroy_user_session_path, method: :delete, class: 'btn btn-default btn-sm') %>
     <% end %>
   </div>
 </footer>
