--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -1,44 +1,44 @@
-<div class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        <%= fa_icon :bars %>
-      </button>
-      <%= link_to dashboard_path, class:'navbar-brand logo' do %>
-        <%= image_tag 'mmi-bordeaux.png' %>
-        <p>Teach</p>
-      <% end %>
-    </div>
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Tableau de bord', dashboard_path %></li>
-        <li><%= link_to 'Années', years_path %></li>
-        <li><%= link_to 'Promotions', promotions_path %></li>
-        <li><%= link_to 'Equipe', users_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Divers <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Discussion', root_path %></li>
-            <li><%= link_to 'Champs', fields_path %></li>
-            <li><%= link_to 'Services', users_summary_path %></li>
-            <li><%= link_to 'Intervenants', budgets_users_path %></li>
-            <li><%= link_to 'Modules', budgets_teaching_modules_path %></li>
+    <%= link_to dashboard_path, class:'navbar-brand logo' do %>
+      <%= image_tag 'mmi-bordeaux.png' %>
+      <p>Teach</p>
+    <% end %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><%= link_to 'Tableau de bord', dashboard_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'Années', years_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'Promotions', promotions_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'Equipe', users_path, class: 'nav-link' %></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Divers</a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><%= link_to 'Discussion', root_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Champs', fields_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Services', users_summary_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Intervenants', budgets_users_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Modules', budgets_teaching_modules_path, class: 'dropdown-item' %></li>
           </ul>
         </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PPN <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Semestres', semesters_path %></li>
-            <li><%= link_to 'Unités d\'enseignement', teaching_units_path %></li>
-            <li><%= link_to 'Sujets', teaching_subjects_path %></li>
-            <li><%= link_to 'Catégories', teaching_categories_path %></li>
-            <li><%= link_to 'Modules', teaching_modules_path %></li>
-            <li><%= link_to 'Objectifs', objectives_path %></li>
-            <li><%= link_to 'Compétences', competencies_path %></li>
-            <li><%= link_to 'Mots-clés', keywords_path %></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PPN </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><%= link_to 'Semestres', semesters_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Ressources', resources_path, class: 'dropdown-item' %></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><%= link_to 'Unités d\'enseignement', teaching_units_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Sujets', teaching_subjects_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Catégories', teaching_categories_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Modules', teaching_modules_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Objectifs', objectives_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Compétences', competencies_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Mots-clés', keywords_path, class: 'dropdown-item' %></li>
           </ul>
         </li>
       </ul>
     </div>
   </div>
-</div>
+</nav>
