--- a/app/views/layouts/discuss.html.erb
+++ b/app/views/layouts/discuss.html.erb
@@ -12,7 +12,7 @@
   </head>
   <body class="discuss">
     <div class="jumbotron">
-      <%= link_to 'Espace enseignants', dashboard_path, class: 'btn btn-default btn-sm teachers' %>
+      <%= link_to 'Espace enseignants', dashboard_path, class: 'btn btn-primary btn-sm teachers' %>
       <div class="logo">
         <%= link_to root_path do %>
           <%= image_tag 'mmi-bordeaux.png' %>
@@ -25,7 +25,7 @@
       <div class="container">
         <%= yield %>
         <div class="row">
-          <div class="col-md-8 col-md-offset-2">
+          <div class="col-md-8 offset-md-2">
             <div id="disqus_thread"></div>
             <script>
             /**
