--- a/app/views/users/_inline_list.html.erb
+++ b/app/views/users/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% users.each do |user| %>
-    <li><%= link_to user, user, class: 'btn btn-default btn-xs' %></li>
+    <li><%= link_to user, user, class: 'btn btn-default btn-sm' %></li>
   <% end %>
 </ul>
