--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Modifier', edit_user_path(@user), class: 'btn btn-primary btn-xs' if can? :edit, @user %>
+<%= link_to 'Modifier', edit_user_path(@user), class: 'btn btn-primary btn-sm' if can? :edit, @user %>
 
 <br/><br/>
 
