--- a/app/views/years/teaching_modules/show.html.erb
+++ b/app/views/years/teaching_modules/show.html.erb
@@ -62,7 +62,7 @@
 
 
 <h2>Maquette</h2>
-<%= link_to 'Planifier une intervention', new_year_involvement_path(year_id: @year.id, teaching_module_id: @teaching_module.id), class: 'btn btn-primary btn-xs' if can? :create, Involvement %>
+<%= link_to 'Planifier une intervention', new_year_involvement_path(year_id: @year.id, teaching_module_id: @teaching_module.id), class: 'btn btn-primary btn-sm' if can? :create, Involvement %>
 <table class="table">
   <thead>
     <tr>
@@ -94,7 +94,7 @@
       <td style="max-width: 200px"><%= simple_format involvement.description %></td>
       <td><%= link_to 'Modifier',
                       edit_year_involvement_path(year_id: @year.id, id: involvement.id),
-                      class: 'btn btn-primary btn-xs' if can? :edit, involvement %></td>
+                      class: 'btn btn-primary btn-sm' if can? :edit, involvement %></td>
     </tr>
   <% end %>
   </tbody>
@@ -137,7 +137,7 @@
           <%= link_to 'Ouvrir la semaine',
                       "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
                       target: :blank,
-                      class: 'btn btn-default btn-xs' %>
+                      class: 'btn btn-default btn-sm' %>
         </td>
       </tr>
     <% end %>
