--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -9,7 +9,7 @@
       Death Stranding
     </p>
     <% if current_user %>
-      <%= link_to('Déconnexion', destroy_user_session_path, method: :delete, class: 'btn btn-default btn-sm') %>
+      <%= link_to('Déconnexion', destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm') %>
     <% end %>
   </div>
 </footer>
