--- a/app/views/discuss/project.html.erb
+++ b/app/views/discuss/project.html.erb
@@ -71,7 +71,7 @@
 <hr>
 
 <h4>Objectifs visés par ce projet</h4>
-<button data-toggle="collapse" data-target="#objectifs" class="btn btn-default">Cliquez pour voir les objectifs</button>
+<button data-toggle="collapse" data-target="#objectifs" class="btn btn-primary">Cliquez pour voir les objectifs</button>
 <div id="objectifs" class="collapse">
   <table class="table table-striped">
     <thead>
