--- a/app/views/keywords/_inline_list.html.erb
+++ b/app/views/keywords/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% keywords.each do |keyword| %>
-    <li><%= link_to keyword, keyword, class: 'btn btn-default btn-sm' %></li>
+    <li><%= link_to keyword, keyword, class: 'btn btn-primary btn-sm' %></li>
   <% end %>
 </ul>
