--- a/app/views/years/involvements/_form.html.erb
+++ b/app/views/years/involvements/_form.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-3">
         <%= f.input :promotion, label: 'Promotion', include_blank: false, collection: @promotions %>
         <%= f.input :user, label: 'Personne' %>
-        <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
+        <%= f.submit 'Enregistrer', class: 'btn btn-primary' %>
       </div>
       <div class="col-md-4">
         <%= f.input :project, label: 'Projet', collection: @projects %>
