--- a/app/views/years/projects/_inline_list.html.erb
+++ b/app/views/years/projects/_inline_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline">
   <% projects.each do |project| %>
-    <li><%= link_to project, [project.year, project], class: 'btn btn-default btn-sm' %></li>
+    <li><%= link_to project, [project.year, project], class: 'btn btn-primary btn-sm' %></li>
   <% end %>
 </ul>
