--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,157 +1,6 @@
 @import 'bootstrap'
 @import 'font-awesome'
 @import 'timeline/timeline'
-@import 'glyphicons'
+@import 'bootstrap/glyphicons'
 @import 'star-rating/star-rating.min'
-
-*
-  font-family: sans-serif
-  font-weight: 300
-  text-rendering: optimizeLegibility
-
-body
-  background-size: cover
-  background-attachment: fixed
-  background-image: asset-url('background.png')
-  background-position: center
-
-ul
-  list-style-type: none
-  list-style-position: inside
-  padding-left: 0
-
-.text-xl
-  font-size: 60px
-  font-weight: 200
-  line-height: 80px
-  small
-    font-size: 16px
-    font-weight: bold
-
-hr.spacer
-  width: 100px
-  margin: 50px auto
-
-.navbar
-  z-index: 999
-
-.abstract
-  background: #eee
-  padding: 20px
-
-#vis
-  width: 660px
-  height: 660px
-  margin: 0 auto
-
-.logo
-  display: block
-  height: 80px
-  width: 200px
-  padding: 15px
-  line-height: 20px
-  img
-    margin-top: -30px
-    margin-left: -25px
-    margin-right: -25px
-    height: 90px
-    float: left
-  p
-    color: white
-    float: right
-    letter-spacing: 2px
-    font-weight: 200
-    font-size: 23px
-    margin-top: 4px
-    text-transform: uppercase
-  &.logo-black
-    filter: brightness(0)
-
-.list-inline li
-  padding-bottom: 10px
-  padding-left: 0
-
-.timeline
-  td.active span
-    display: block
-    width: 100%
-    min-width: 50px
-    min-height: 20px
-    background: #337ab7
-    color: white
-    text-align: center
-    font-size: 10px
-    padding: 4px
-
-main
-  background: white
-  padding-top: 30px
-  padding-bottom: 60px
-
-.jumbotron
-  color: white
-  margin-top: -1000px
-  margin-bottom: 0
-  text-align: center
-  padding: 1050px 50px 130px
-  position: relative
-  z-index: 0
-  background: transparent
-  &:before
-    content: ''
-    position: absolute
-    z-index: -1
-    top: 0
-    right: 0
-    bottom: 0
-    left: 0
-    background: black
-    opacity: .3
-
-.panel-heading
-  h3
-    margin: 0
-  h4
-    margin-top: 5px
-    font-weight: 200
-.panel-primary .panel-heading a
-  color: white
-
-body.devise
-  background-size: cover
-  background-attachment: fixed
-  background-image: asset-url('background.png')
-  background-position: center
-  .logo
-    margin: 50px auto
-  footer
-    color: black
-    &:before
-      border-color: black
-
-footer
-  height: 100vh
-  font-size: 10px
-  text-align: center
-  .inner
-    background: white
-    padding: 60px
-    display: inline-block
-    margin-top: 30vh
-    .logo
-      margin: 10px auto 30px !important
-
-body.discuss
-  .logo
-    margin: 30px auto
-  .btn.teachers
-    float: right
-  h1
-    text-align: center
-    font-weight: 200
-  #disqus_thread
-    margin-top: 120px
-
-.table
-  th
-    vertical-align: top
+@import 'application/layout'
