--- a/app/views/promotions/events_imported.html.erb
+++ b/app/views/promotions/events_imported.html.erb
@@ -32,7 +32,7 @@
           <%= link_to 'Ouvrir la semaine',
                       "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
                       target: :blank,
-                      class: 'btn btn-default btn-sm' %>
+                      class: 'btn btn-primary btn-sm' %>
         </td>
       </tr>
     <% end %>
