--- a/app/views/teaching_modules/_form.html.erb
+++ b/app/views/teaching_modules/_form.html.erb
@@ -10,6 +10,6 @@
       </div>
     </div>
   <% end %>
-  <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
+  <%= f.submit 'Enregistrer', class: 'btn btn-primary' %>
 <% end %>
 
