--- a/app/views/years/projects/_evaluation_comments.html.erb
+++ b/app/views/years/projects/_evaluation_comments.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="list-unstyled">
   <% list.each_with_index do |text, index| %>
     <li><span class="badge bg-primary"><%= "#{letter}#{index}" %></span> <%= text %></li>
   <% end %>
