--- a/app/views/years/projects/_form.html.erb
+++ b/app/views/years/projects/_form.html.erb
@@ -7,7 +7,7 @@
       <%= f.association :user, label: 'Responsable' %>
       <%= f.input :description, input_html: { rows: 5 } %>
       <%= f.input :detailed_description, input_html: { rows: 15 } %>
-      <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
+      <%= f.submit 'Enregistrer', class: 'btn btn-primary' %>
     </div>
     <div class="col-md-4">
       <%= f.input :position, label: 'N° de semaine (début de l\'atelier)' %>
@@ -21,5 +21,5 @@
     </div>
   </div>
   <%= f.input :objectives, as: :check_boxes, member_label: :objective_with_module %>
-  <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
+  <%= f.submit 'Enregistrer', class: 'btn btn-primary' %>
 <% end %>
