--- a/app/views/years/projects/show.html.erb
+++ b/app/views/years/projects/show.html.erb
@@ -1,10 +1,10 @@
 <%= link_to 'Modifier',
             edit_year_project_path(year_id: @year.id, id: @project.id),
-            class: 'btn btn-default' if can? :edit, @project %>
+            class: 'btn btn-primary' if can? :edit, @project %>
 <%= link_to 'Synchroniser la maquette à partir de l\'EDT',
             sync_involvements_from_events_year_project_path(year_id: @year.id, id: @project.id),
             method: :post,
-            class: 'btn btn-default' if can? :edit, @project %>
+            class: 'btn btn-primary' if can? :edit, @project %>
 <br/><br/>
 <div class="row">
   <div class="col-md-3">
@@ -120,7 +120,7 @@
         <%= link_to 'Ouvrir la semaine',
                     "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
                     target: :blank,
-                    class: 'btn btn-default btn-sm' %>
+                    class: 'btn btn-primary btn-sm' %>
       </td>
     </tr>
   <% end %>
