--- a/app/assets/stylesheets/application/_layout.sass
+++ b/app/assets/stylesheets/application/_layout.sass
@@ -17,7 +17,7 @@ hr.spacer
   margin: 50px auto
 
 .navbar
-  z-index: 999
+  z-index: 99
 
 .abstract
   background: #eee
@@ -136,6 +136,13 @@ body.discuss
   #disqus_thread
     margin-top: 120px
 
-.table
-  th
-    vertical-align: top
+.nav-pills
+  .nav-link
+    font-size: 0.8rem
+    box-sizing: border-box
+    border-radius: 20px
+    margin-right: 10px
+    border: 1px solid #CCCCCC
+    color: black
+    &.active
+      border: none
