--- a/app/views/promotions/teaching_modules/index.html.erb
+++ b/app/views/promotions/teaching_modules/index.html.erb
@@ -1,4 +1,6 @@
-<div id="modules"></div></td>
+<%= render 'promotions/nav' %>
+
+<div id="modules"></div>
 <script type="text/javascript">
   $(function () {
     $('#modules').highcharts({
