--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -1,42 +1,37 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Label:</strong>
+  <strong>Nom</strong>
   <%= @resource.label %>
 </p>
 
 <p>
-  <strong>Code:</strong>
-  <%= @resource.code %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @resource.description %>
-</p>
-
-<p>
-  <strong>Hours cm:</strong>
-  <%= @resource.hours_cm %>
-</p>
-
-<p>
-  <strong>Hours td:</strong>
-  <%= @resource.hours_td %>
-</p>
-
-<p>
-  <strong>Hours tp:</strong>
-  <%= @resource.hours_tp %>
-</p>
-
-<p>
-  <strong>Code apogee:</strong>
+  <strong>Code Apogée</strong>
   <%= @resource.code_apogee %>
 </p>
 
 <p>
-  <strong>Semester:</strong>
+  <strong>Code</strong>
+  <%= @resource.code %>
+</p>
+
+<p>
+  <strong>Description</strong>
+  <%= @resource.description %>
+</p>
+
+<p>
+  <strong>Heures CM/TD</strong>
+  <%= @resource.hours_cm %>
+</p>
+
+<p>
+  <strong>Heures TP</strong>
+  <%= @resource.hours_tp %>
+</p>
+
+<p>
+  <strong>Semestre</strong>
   <%= @resource.semester %>
 </p>
 
