--- a/app/views/application/_breadcrumb.html.erb
+++ b/app/views/application/_breadcrumb.html.erb
@@ -1,3 +1,3 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" class="small mb-4">
   <%= render_breadcrumbs builder: ::BootstrapFiveBreadcrumbs %>
 </nav>
