--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= @title.nil? ? 'MMI Bordeaux' : @title %></title>
     <%= csrf_meta_tags %>
@@ -15,9 +14,9 @@
     <%= render 'application/jumbotron' %>
     <main class="container-fluid">
       <%= render 'application/breadcrumb' %>
-      <%= bootstrap_flash %>
       <%= yield %>
     </main>
     <%= render 'application/footer' %>
+    <%= render 'application/toastr' %>
   </body>
 </html>
