--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Resource', new_resource_path %>
+<%= link_to 'Nouvelle ressource', new_resource_path, class: button_classes %>
