--- a/app/assets/stylesheets/application/_layout.sass
+++ b/app/assets/stylesheets/application/_layout.sass
@@ -144,5 +144,5 @@ body.discuss
     margin-right: 10px
     border: 1px solid #CCCCCC
     color: black
-    &.active
+    &.active, &.bg-warning
       border: none
